# flux_2

./: DEPLOYMENT_COMPLETE.md  FIXES_APPLIED.md  MVP_IMPLEMENTATION_PLAN.md  MVP_STATUS.md  Makefile  README.md  bad.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt  ruff.toml
apps/api/docs/: BACKTEST_RESULTS.md  PROMOTION_ALGORITHM_SPEC.md  PROMOTION_SYSTEM_IMPLEMENTATION.md  SPARSE_DATA_STRATEGY.md  waste_factor_integration_plan.md
apps/api/migrations/: add_restaurant_settings_unique_constraint.sql  env.py  script.py.mako
apps/api/scripts/: backtest_forecasts.py  check_profitability_structure.py  generate_synthetic_data.py  generate_synthetic_stockout_data.py  quick_forecast_test.py  rls_policies.sql  seed.py  seed_forecast.py  test_all_menu_items.py  test_cached_estimates.py  test_confirmation_workflow.py  test_confirmed_recipes.py  test_data_health.py  test_forecast_api.py  test_profitability.py  test_promotion_detection.py  test_recipe_api.py  test_recipe_estimates.py  test_recipes.py  test_settings_endpoint.py  test_stockout_detection.py  test_waste_calculation.py  test_waste_factors.py  validate_synthetic_data.py  validate_waste_factors.py
apps/api/src/: main.py
apps/api/tests/: conftest.py  test_auth.py  test_business_day.py  test_csv_parser.py  test_data.py  test_data_health.py  test_data_health_realistic.py  test_features.py  test_forecast.py  test_health.py  test_ingestion.py  test_menu_extraction.py  test_menu_router.py  test_midnight_ingestion.py  test_security.py  (+10 more)
(+181 files in other folders)
