[project]
name = "flux-api"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.112.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    "psycopg2-binary>=2.9.9",
    "python-dateutil>=2.8.2",
    "chardet>=5.2.0",
    "openai>=1.0.0",
    "rapidfuzz>=3.0.0",
    "redis>=5.0.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.0",
    "pytz>=2024.1",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]
